# ai-assistants

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  start-all-mcp-servers.sh  test_autonomous.py  test_autonomous_clean.py  test_chat_simple.py  test_websocket_chat.py
.cursorrules/: architecture-patterns.md  component-development.md  react-typescript.md
.data/: ai_assistants.sqlite3-shm  ai_assistants.sqlite3-wal
admin-frontend/: MCP_SERVERS_CONFIG.md  WEBSOCKET_TROUBLESHOOTING.md  index.html  package-lock.json  package.json
backend/: requirements.txt  test_bookings_simple.py
booking-flow-mcp-server/: README.md  main.py  start.sh
booking-log-mcp-server/: README.md  main.py  requirements.txt  start.sh  test_mcp.py
calendar-mcp-server/: README.md  main.py  start.sh  test_mcp.py
docs/: AGREGAR_USUARIOS_PRUEBA_GOOGLE.md  AWS_DEPLOYMENT.md  AWS_ENV_VARIABLES.md  AWS_FREE_TIER.md  CONFIGURAR_OAUTH2_PASO_A_PASO.md  CUSTOMER_CALENDAR_SETUP.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_RECOMMENDATION.md  ESTRATEGIA_ESCALABLE_USUARIOS.md  GOOGLE_CALENDAR_ACCESS_EXPLAINED.md  GUIA_AGREGAR_USUARIOS_PRUEBA.md  INICIAR_SERVIDORES.md  MCP_CALENDAR_INTEGRATION.md  OAUTH2_FLOW_DETAILED.md  ONBOARDING_EMPRESA_COMPLETO.md  PASOS_AGREGAR_USUARIO_PRUEBA.md  PASOS_PRUEBA_CARRIAGADA.md  PROXIMOS_PASOS_CARRIAGADA.md  PUBLICAR_APLICACION_GOOGLE.md  QUICK_START.md  README_DEPLOYMENT.md  TEST_EMPRESA_CARRIAGADA.md  UBICACION_USUARIOS_PRUEBA.md
infrastructure/: docker-compose.aws.yml
llm-mcp-server/: .gitignore  README.md  main.py  requirements.txt  test_mcp.py
(+295 files in other folders)
